--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!-- Global CSS (CSS rules you want applied to all pages) -->
     <link rel="stylesheet" href="css/global.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+NZ:wght@100..400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playwrite+IT+Moderna:wght@100..400&display=swap" rel="stylesheet"><link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playwrite+IT+Moderna:wght@100..400&display=swap" rel="stylesheet">
 
     <!-- Page-specific CSS -->
     <link rel="stylesheet" href="css/landing.css">
 
     <title>Login to the Microblog Network!</title>
+
+    <script src="https://cdn.lordicon.com/lordicon.js"></script>
 
     <!-- Run BEFORE page is finished loading (before window.onload - don't add the `defer` attribute): -->
     <script src="js/auth.js"></script>
@@ -26,33 +28,60 @@
         if (isLoggedIn() === true) window.location.replace("posts.html");
     </script>
 </head>
-<body>
 
-    <header>
-        <h1>Welcome to <code>YOUR MICROBLOG NETWORK</code></h1>
-    </header>
+<body class="container vh-100 d-flex">
 
-    <main>
+    <main class="container d-flex flex-grow-1 flex-column align-items-center justify-content-center">
 
-        <form id="login">
+        <div class="row">
+            <h1 class="display-3 col-12 text-center mb-5">Musicians Cove</h1>
+        </div>
+
+        <form id="login" class="row justify-content-center text-center mt-3">
             <div>
-                <label for="username">Username</label>
-                <input type="text" id="username" minlength="3">
+                <button id="google" type="button" class="col-12 mb-2 
+                btn btn-primary 
+                d-flex align-items-center 
+                justify-content-center">
+                    <lord-icon
+                        src="https://cdn.lordicon.com/cheqjfch.json"
+                        trigger="hover">
+                    </lord-icon> 
+                    Continue With Google
+                </button>
+            </div>
+
+            <div class="separator my-3">OR</div>
+
+            <div>
+                <input type="text" id="username" class="col-12 mb-2" placeholder="Username, Phone Number, or Email"
+                    minlength="3">
             </div>
 
             <div>
-                <label for="password">Password</label>
-                <input type="password" id="password" minlength="6">
+                <input type="password" id="password" class="col-12 mb-2" placeholder="Password">
+            </div>
+            <div class="col-6"></div>
+            <a href="verification.html" class="col-6 align-items-end text-end mb-5">Forgot Password?</a>
+            <div>
+                <button id="loginButton" type="submit" class="btn btn-primary col-6">Login</button>
+            </div>
+            
+            <div class="col-7 justify-content-center mt-5">
+                <p>Don't have an account? <a href="sign_up.html">Sign&nbspUp</a></p>
             </div>
 
-            <button id="loginButton" type="submit">Login</button>
         </form>
 
     </main>
 
-    <footer></footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
     <!-- Page-specific code -->
     <script src="js/landing.js"></script>
 </body>
+
 </html>
