styling and fix edit page
styling and fix edit page

--- a/posts.html
+++ b/posts.html
@@ -16,7 +16,7 @@
     <!-- Page-specific CSS -->
     <link rel="stylesheet" href="css/posts.css">
 
-    <title>/POSTS</title>
+    <title>POSTS</title>
 
     <!-- Run BEFORE page is finished loading (before window.onload): -->
     <script src="js/auth.js"></script>
@@ -26,7 +26,7 @@
 </head>
 <body>
     <button type="button" onclick="logout()" class="btn btn-primary">home</button>
-    <button type="button" onclick="logout()" class="btn btn-primary">Edit Profile</button>
+   <a href="edit_profile.html"><button type="button" class="btn btn-primary">Edit Profile</button></a>
     <header>
         <h1>POSTS PAGE</h1>
     </header>
