--- a/edit_profile.html
+++ b/edit_profile.html
@@ -65,7 +65,7 @@
         </div>
         <form class="row">
 
-            <div class="col-12 mb-3 d-flex justify-content-evenly">
+            <div class="col-12 mb-3 d-flex flex-wrap justify-content-evenly">
                 <img src="https://placehold.co/400x400/ffe97e/f7b50d?text=Profile" alt="Profile Image">
                 <textarea id="bio" class="pt-4 px-5">
 bio
