--- a/posts.html
+++ b/posts.html
@@ -1,6 +1,7 @@
 <!-- POSTS page -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,27 +25,37 @@
         if (isLoggedIn() === false) window.location.replace("/index.html");
     </script>
 </head>
+
 <body>
 
-    <nav class="pt-3 d-flex flex-column justify-content-between">
-
-        <div class="navbar navbar-expanded">
-            <div class="navbar navbar-brand pb-3">
-                <a href="edit_profile.html"><img src="https://placehold.co/400x400/ffe97e/f7b50d?text=Profile" alt="Profile Image" id="img"></a>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <h1>Musicians </br>Cove</h1>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+                aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <img src="https://placehold.co/400x400/ffe97e/f7b50d?text=Profile" alt="Profile Image" id="img">
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
+                <ul class="navbar-nav d-flex align-items-end mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="posts.html">Posts</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="edit_profile.html">Edit Profile</a>
+                    </li>
+                    <div class="d-flex">
+                        <button class="Btn" onclick="logout()">
+                            <div class="sign"><svg viewBox="0 0 512 512">
+                                    <path
+                                        d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z">
+                                    </path>
+                                </svg></div>
+                            <div class="text">Logout</div>
+                        </button>
+                    </div>
+                </ul>
             </div>
         </div>
-
-        <div class="d-flex">
-            <button class="Btn" onclick="logout()">
-                <div class="sign"><svg viewBox="0 0 512 512">
-                        <path
-                            d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z">
-                        </path>
-                    </svg></div>
-                <div class="text">Logout</div>
-            </button>
-        </div>
-
     </nav>
 
     <header>
@@ -62,4 +73,5 @@
     <!-- Page-specific code -->
     <script src="js/posts.js"></script>
 </body>
+
 </html>
