added post structure
added post structure

--- a/posts.html
+++ b/posts.html
@@ -58,11 +58,29 @@
         </div>
     </nav>
 
-    <header>
-        <h1>POSTS PAGE</h1>
-    </header>
+    <main class="d-flex">
+        <div class="container">
 
-    <main>
+        </div>
+
+        <div class="container" id="new_post">
+            <div class="row justify-content-center">
+                <textarea id="new_posts" class="col-6"></textarea>
+            </div>
+            <div class="row justify-content-center">
+                <button class="btn btn-primary mt-1 col-6" id="addPost">Posts</button>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-6" id="posts">
+
+                </div>
+            </div>
+
+        </div>
+
+        <div class="container">
+
+        </div>
 
     </main>
 
