--- a/edit_profile.html
+++ b/edit_profile.html
@@ -34,7 +34,7 @@
             <h1>Musicians </br>Cove</h1>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                <img src="https://placehold.co/400x400/ffe97e/f7b50d?text=Profile" alt="Profile Image" id="img">
+                <img src='https://cataas.com/cat?position=center&width=400&height=400' alt="Profile Image" id="img">
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
                 <ul class="navbar-nav d-flex align-items-end mb-2 mb-lg-0">
@@ -69,7 +69,7 @@
         <form class="row">
 
             <div class="col-12 mb-3 d-flex flex-wrap justify-content-evenly">
-                <img src="https://placehold.co/400x400/ffe97e/f7b50d?text=Profile" alt="Profile Image">
+                <img src='https://cataas.com/cat?position=center&width=400&height=400' alt="Profile Image">
                 <textarea id="bio" class="pt-4 px-5">
 bio
                 </textarea>
