--- a/sign_up.html
+++ b/sign_up.html
@@ -39,7 +39,7 @@
         <button type="button" id="signup" class="mt-4 btn btn-primary">Sign Up</button>
 
         <div class="text-center mt-5">
-            <p>Go back to sign in <a href="index.html">Sign&nbspIn</a></p>
+            <p>Already Have an account? <a href="index.html">Sign&nbspIn</a></p>
         </div>
 
     </form>
