--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Page-specific CSS -->
     <link rel="stylesheet" href="css/landing.css">
 
-    <title>Login to the Microblog Network!</title>
+    <title>Login</title>
 
     <script src="https://cdn.lordicon.com/lordicon.js"></script>
 
@@ -34,7 +34,7 @@
     <main class="container d-flex flex-grow-1 flex-column align-items-center justify-content-center">
 
         <div class="row">
-            <h1 class="display-3 col-12 text-center mb-5">Musicians Cove</h1>
+            <h1 class="display-3 col-12 text-center mb-5">🎶Musicians Cove🎶</h1>
         </div>
 
         <form id="login" class="row justify-content-center text-center mt-3">
